Исправлены рекомендации